--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
  <html>
-   <head>
-   <title>My App</title>
+   <head>My App</title>
    </head>
    <body>
-     This is my app
+     This is my app!
+     Login Form
    </body>
- </html>
+ <html>
